--- a/responsive.css
+++ b/responsive.css
@@ -1,4 +1,4 @@
-@media  screen and (max-width:400px) {
+@media  screen and (max-width:600px) {
     .container{
         background:linear-gradient(#d6cadd,#e0ffff);
         width: 100%;
@@ -10,6 +10,12 @@
     }
     .img img{
         height: 500px;
+    }
+    .menu{
+        font-size: 30px;
+    }
+    .menu ul li:hover{
+        font-size: 35px;
     }
     .menu-btn::before,
 .menu-btn::after
@@ -44,8 +50,20 @@
         width: 100%;
         padding: 0 0 1rem 0;
     }
+    #third-s{
+        margin-top: 1rem;
+    }
+    #third-s .counter{
+        margin-top:1rem;
+        flex-direction: column;
+    }
     .counter h3{
+        margin-top: 2rem;
         font-size: 50px;
+    }
+    .img-box{
+        width:252px;
+        height: 320px;
     }
     .counter p{
         font-size: 22px;
@@ -61,6 +79,11 @@
     }
     #profiles:last-child{
         flex-direction: column-reverse;    
+    }
+    .form{
+        width: 200px;
+        padding:  0;
+        margin-left: -3rem;
     }
     .form div{
         margin-top: 1rem;
